# AdjointMPI

./: AUTHORS  AdjointMPI.files  COPYING  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  aclocal.m4  bootstrap.sh  config.h  config.h.in  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
benchmarks/Accumulate_prod/: pattern.cpp
benchmarks/Allreduce_sum/: Makefile
benchmarks/Put/: Makefile
benchmarks/Reduce_sum/: pattern.cpp
benchmarks/SendRecv/: pattern.cpp
doc/: Doxyfile.in  Makefile.am
examples/: Makefile  Makefile.inc
examples/IrecvSendWaitTwoWay/: ampiDriver.cpp
examples/IrecvSendWaitTwoWay_dco_cpp/: Makefile  driver.cpp  fdDriver.cpp
examples/IrecvSendWaitTwoWay_dco_fortran/: Makefile  ampiDriver.F95  ampi_fortran_interface.F90  ampi_fortran_stubs.c  ampi_fortran_stubs.h  ampisupport.cpp  driver.F95  fdDriver.F95
examples/alloc_dcc/: Makefile  alloc.cpp  b1_alloc.conf  d2_b1_alloc.conf  dcc_alloc.cpp  dcc_alloc.hpp  driver.cpp
examples/awaitall_dco/: Makefile  awaitall.cpp
examples/burger_dcc/: cleanup_test.sh  dcc_alloc.cpp  dcc_alloc.hpp  dcc_mpi.cpp  dcc_mpi.hpp  f.c  main_1.cpp  main_2.cpp  run_test.sh  sotlm.ref  tlm.ref
examples/dco_neu_ampi/: Makefile  active_type.hpp  ampi_interface.cpp  dco_neu_ampi.pro  speelpenning  speelpenning.cpp  tlm_type.hpp
examples/heat_dco/: Makefile  ampi_interface.cpp  f.cpp  f.hpp  sd.cpp
examples/mandelbrot_dco/: Makefile  complex.cpp  complex.hpp  dco_tape.cpp  draw.cpp  draw.hpp  mandelbrot.cpp
examples/omp/: Makefile  omp.cpp  test_mpi.cpp  test_omp.cpp
examples/pi_dco/: Makefile  dco_tape.hpp  pi.cpp
examples/reduce_dco/: Makefile  reduce.cpp
examples/speelpenning_dcc/: Makefile  b1_distribute.conf  dcc_mpi.cpp  dcc_mpi.hpp  distribute.cpp  driver.cpp  speelpenning.cpp
examples/speelpenning_dco/: Makefile  speelpenning.cpp
include/: ampi.h  ampi_interface.h  ampi_interface.hpp  ampi_stack.h  ampi_stubs.h  ampi_tape.h  ampi_tape.hpp  uthash.h
interfaces/: ampi_fortran_interface.F90  ampi_fortran_stubs.c  ampi_fortran_stubs.h  ampi_interface.cc  dcc_alloc.hpp  dco_tape.cpp  dco_tape.hpp
interfaces/dcc/: dcc_alloc.cpp  dcc_alloc.hpp  dcc_mpi.cpp  dcc_mpi.hpp
interfaces/dco/: ampi_fortran_interface.F90  ampi_fortran_stubs.c  ampi_fortran_stubs.h  ampi_interface.cpp  ampi_interface_master.cpp
interfaces/fortran/: adj_tape_mpi.F90  ampi_fortran_interface.F90  ampi_fortran_stubs.c  ampi_fortran_stubs.h
patterns/Accumulate_sum/: pattern.cpp
patterns/Allreduce_prod_1/: Makefile  pattern.cpp
patterns/Allreduce_prod_2/: pattern.cpp
patterns/Allreduce_sum/: pattern.cpp
patterns/Broadcast/: pattern.cpp
patterns/Get/: pattern.cpp
patterns/Put/: pattern.cpp
patterns/Reduce_prod_1/: pattern.cpp
patterns/Reduce_prod_2/: pattern.cpp
patterns/SendRecv/: pattern.cpp
src/: Makefile.am  Makefile.in  ampi.c  ampi_stack.c  ampi_tape.c
src/.deps/: ampi.Po  ampi_stack.Po  ampi_tape.Po
test/: Makefile  Makefile.inc
test/Allreduce/: Makefile  all_ok.check  ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/Bcast/: Makefile  ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/BsendRecv/: ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/IsendIrecv/: Makefile  all_ok.check  ampiDriver.cpp  driver.cpp
test/IsendIrecvWaitany/: Makefile  ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/Reduce/: Makefile  ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/ScatterGather/: Makefile  all_ok.check  ampiDriver.cpp  ampi_interface.cpp  driver.cpp  fdDriver.cpp
test/SendRecv/: Makefile  ampiDriver.cpp  driver.cpp  fdDriver.cpp
test/Sendrecv/: ampiDriver.cpp  driver.cpp
test/Sendrecv_replace/: Makefile  all_ok.check  ampiDriver.cpp  ampi_interface.cpp  fdDriver.cpp
