#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([1.0])
AC_INIT([libAMPI], [0.2], [schanen@stce.rwth-aachen.de])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror])
#AC_PROG_CC_C89
## Compilers and MPI
#AC_PROG_CC
#AC_PROG_CXX
#AC_LANG([C])
#AC_LANG([C++])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB
AC_LANG([C])
AC_OPENMP
AC_HEADER_STDC

AC_CHECK_LIB([m], [sqrt],,AC_MSG_ERROR(Could not find -lm libary.))
AC_LANG([C])
LX_FIND_MPI()
AC_LANG([C++])
LX_FIND_MPI()
CC=$MPICC
CXX=$MPICXX
#ACX_MPI([CC="$MPICC"], [AC_MSG_ERROR([Could not find MPI.])])
#ACX_MPI([CC="mpicc"], )
#AC_LANG([C++])
#ACX_MPI([CXX="$MPICXX"], [AC_MSG_ERROR([Could not find MPI.])])
#ACX_MPI([CXX="mpicxx"], ])

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lAMPI':
#AC_CHECK_LIB([AMPI], [main],,AC_MSG_ERROR(Could not find AMPI library))
# FIXME: Replace `main' with a function in `-lm':

# Checks for header files.
#AC_CHECK_HEADERS([stdint.h],,AC_MSG_ERROR(Could not find stdint.h header file.))

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([floor memset pow sqrt])

AC_CONFIG_FILES([Makefile
		 src/Makefile])
AC_OUTPUT
